# Star-Idle

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: main.cpp
src/lib/: application.cpp  application.hpp  common.hpp  game_state.cpp  game_state.hpp  pch.cpp  pch.hpp  save_system.cpp  save_system.hpp  stb_image_impl.cpp  texture_cache.cpp  texture_cache.hpp
src/star_idle/app/: application.cpp  application.hpp
src/star_idle/game/: game_state.cpp  game_state.hpp
src/star_idle/platform/: save_system.cpp  save_system.hpp  texture_cache.cpp
